# simpleShipGame

./: CMakeLists.txt  Enemy.cpp  README.md
header/: Bullet.h  Enemy.h  Game.h  Player.h
src/: Bullet.cpp  Game.cpp  Player.cpp  main.cpp
